--- a/express-api/package.json
+++ b/express-api/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "pg": "^8.17.2",
+    "resend": "^6.9.1",
     "ws": "^8.19.0"
   },
   "devDependencies": {
