--- a/express-api/package.json
+++ b/express-api/package.json
@@ -24,7 +24,8 @@
     "express": "^5.2.1",
     "pg": "^8.17.2",
     "resend": "^6.9.1",
-    "ws": "^8.19.0"
+    "ws": "^8.19.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
